CHANGES
=======

master
------
* `QueueTask` new counters: queue_depth, n_trylater, n_unhandled, n_completed, execute_duration_ms
* Add http-based thrift support to sparts.thrift.client
* Tasks now accessible via attributes on `service.tasks` by name and via `get()` and `require()`
* Fixed a race condition in deferred errback handling in QueueTask
* ExecuteContext (for QueueTask) now supports a `future` keyword argument.
* `sparts.timer` with `Timer` class for tracking timings
* `sparts.counters.Callback` counter that take a callback to be called to return the value.
* Better support for counters defined in `initTask()` (instead of declaratively)
* Improved unittest stability

0.5.1
-----
* Renamed FB303ProcessorTask to FB303HandlerTask
* NBServerTask can now specify a MODULE to dictate which thrift handler task should be used
  in the event that more than one has been registered.
* Changed thrift handler semantics: you must set a MODULE instead of PROCESSOR on things now


0.5.0
-----
* Moved counters from sparts.sparts to sparts.counters
* Fix some bugs in DirectoryWatcherTask, counters
* Add an initService() hook to VService
* Added a hook to do per-thread Task-specific initialization, initTaskThread()
* `sparts.thrift.client` with ThriftClient helper to reduce synchronous thrift client boilerplate
* Basic python3 support, python2.6 support via `six` dependency.
* `sparts.ctx` module with common helpful context managers
* `sparts.thrift.compiler` with helpers to generate thrift on-the-fly
* Various unittest, documentation improvements
* Handle string args to sparts.tasks.twisted_command.CommandTask better

0.4.1
-----
* Fixed a major bug that prevents mixing tasks that have both samples and standard counters
* Fixed logspew in (thrift) NBServerTask shutdown
* Improved unittest usability and performance significantly

0.4.0
-----
* New tasks.twisted_command.CommandTask for executing and tailing commands in subprocesses